--- a/plantilla-youtube.html
+++ b/plantilla-youtube.html
@@ -18,7 +18,6 @@
             <a href="#" class="link bold">Primer Hijo</a>
             <a href="#" class="link">Segundo Hijo</a>
             <a href="#" class="link">Tercer Hijo</a>
-            
         </div>
         <a href="#" class="link">Cuarto Hijo</a>
         <form action="">
@@ -27,7 +26,7 @@
         </form>
     </div>
     <!-- Soy un comentario en el DOM -->
-    <!-- <script src="./js/plantilla-dom-youtube.js"></script> -->
-    <script src="./js/continuacion-dom.js"></script>
+    <script src="./js/plantilla-dom-youtube.js"></script>
+    <!-- <script src="./js/continuacion-dom.js"></script> -->
 </body>
 </html>
